paper ready except for HS

--- a/abc_comprehensivecba.tex
+++ b/abc_comprehensivecba.tex
@@ -49,7 +49,7 @@ University of Southern California}
 \singlespacing
 \thispagestyle{empty}
 \begin{abstract}
-\noindent This paper quantifies the life-cycle benefits of a widely implemented, prototypical early childhood program targeting disadvantaged families. The program fostered children's skills from ages 0 to 5. It also provided full-time daycare to the mothers, which supported their employment and educational participation. It was evaluated by random assignment and followed participants through their mid 30s. We join experimental data with non-experimental data using economic models to forecast the life-cycle benefits. They include the income of the parents of the treated children, as well the education, labor income, criminal activity, and health of the treated children. Our baseline median estimate of the internal rate of return (benefit/cost ratio) is 13.7\% (7.3). We conduct extensive sensitivity analyses to account for model estimation error, model pretesting, and judgments made about the empirical magnitudes of non-market treatment effects. Our estimates of the internal rate of return (benefit/cost ratio) range from 8.0\% to 18.3\% (1.52 to 17.40). We examine the performance of widely used, \textit{ad hoc} estimates of long-term benefits based on childhood test scores, and find them wanting. \textbf{[WC: 175]}
+\noindent This paper quantifies the life-cycle benefits of a widely implemented early childhood program targeting disadvantaged families. It was evaluated by random assignment. We join experimental data with non-experimental data using economic models to forecast the life-cycle benefits. Our baseline estimate of the internal rate of return (benefit/cost ratio) is 13.7\% (7.3). We conduct extensive sensitivity analyses to account for model estimation error, model pretesting, and judgments made about the empirical magnitudes of non-market treatment effects. We examine the performance of widely used, \textit{ad hoc} estimates of long-term benefits based on childhood test scores and find them wanting. \textbf{[WC: 98]}
 \end{abstract}
 
 \noindent \textbf{Keywords}: Childcare, early childhood education, life-cycle benefits, long-term forecasts, rates of return. \\
@@ -119,8 +119,6 @@ We contribute to the literature on the effectiveness of early childhood programs
 
 Figure~\ref{figure:main} previews our findings. It displays the discounted (using a 3\% discount rate) life-cycle benefits and costs of the program (2014 USD) pooled across genders, over all categories, and for separate categories as well.\footnote{The baseline discount rate of 3\% is an arbitrary decision. In Table~\ref{table:bcsens} and Table~\ref{table:cba}, we report benefit/cost ratios using other discount rates. Using discount rates of 0\%, 3\%, and 7\%, the estimates for the benefit/cost ratios are 17.40 (s.e. 5.90), 7.33 (s.e. 1.84), and 2.91 (s.e. 0.59), respectively. We report estimates for discount rates between 0\% and 15\% in  Appendix~\ref{appendix:varying-discount-rate}.} We report separate estimates by gender later in this paper. The costs of the program are substantial, as has frequently been noted by critics.\footnote{See, e.g., \citet{Fox_News_2014_Head_Start_Effects} and \citet{Whitehurst_2014_Senate_Testimony}.} But so are the benefits, which far outweigh the costs.
 
-Figure~\ref{figure:vennpooled} summarizes the results from our extensive sensitivity analyses. It shows the estimated rates of return and benefit/cost ratios when we calculate our estimates under the assumption of only one stream being the benefit. We further recalculate the estimates with all possible combinations of the main benefit and cost streams. Our measures of economic efficiency remain statistically and economically significant even after eliminating the benefits from any one of the four main components that we monetize. No single component drives our results. We report estimates from a variety of specifications of regressors and functional forms. Our estimates are robust to different plausible assumptions about the values of non-market outcomes, for which conventional estimates of standard errors are not available.
-
 \begin{figure}[!htbp]
 \caption{Benefit/Cost Ratio and Internal Rate of Return when Accounting for Different Combinations of the Main Benefits}\label{figure:vennpooled}
 \centering
@@ -130,7 +128,11 @@ Figure~\ref{figure:vennpooled} summarizes the results from our extensive sensiti
 Note: This figure presents all possible combinations of accounting for the benefits from the four major categories in our analysis. The non-overlapping areas present estimates accounting for a single category as the benefit. When two categories overlap, these are the benefits that we account for. And so on for the rest of the plot. The costs remain constant across all calculations and are the same as in Figure~\ref{figure:main}. Inference is based on non-parametric, one-sided $p$-values from the empirical bootstrap distribution. We bold point estimates significant at the $10\%$ level.\\}
 \end{figure}
 
+Figure~\ref{figure:vennpooled} summarizes the results from our extensive sensitivity analyses. It shows the estimated rates of return and benefit/cost ratios when we calculate our estimates under the assumption of only one stream being the benefit. We further recalculate the estimates with all possible combinations of the main benefit and cost streams. Our measures of economic efficiency remain statistically and economically significant even after eliminating the benefits from any one of the four main components that we monetize. No single component drives our results. We report estimates from a variety of specifications of regressors and functional forms. Our estimates are robust to different plausible assumptions about the values of non-market outcomes, for which conventional estimates of standard errors are not available.
+
 Figure~\ref{figure:ranges} summarizes the range of all of the estimates that we generate in this paper. The overall benefit/cost ratio (internal rate of return) ranges from 1.52 to 17.40 (8 to 18.3) for the full sample. They range from 2.23 to 25.45 (6 to 19.4) for the males, and from 1.12 to 5.79 (4 to 18) for the females. Benefits from reductions in criminality and increased labor income are pronounced for males, contributing to their larger estimates. However, when we omit crime from our analysis, we still estimate substantial returns for males. The returns of the program are higher for males relative to attending a low-quality preschool; the returns are higher for females relative to those who stay at home.
+
+This paper justifies and interprets these estimates. The paper unfolds in the following way. Section~\ref{section:background} discusses the ABC/CARE program. Section~\ref{section:cbamethodology} presents our notation and the definitions of the treatment effects reported in \cite{Garcia_Heckman_Ziff_2017_Gender-Diff_UNPUBLISHED} that are the basis for the estimates reported in this paper. They show that the program had substantial impacts on multiple domains. This paper reports treatment effects in economically meaningful metrics.  Section~\ref{section:cbamethodology} presents our methods for forecasting life-cycle outcomes and the evidence supporting the assumptions that justify them. Section~\ref{section:monetizing-benefits-costs} discusses how we monetize life-cycle outcomes. Section~\ref{section:cbaresults} reports our estimates of benefit/cost ratios and rates of return and the outcomes from a variety of robustness checks. Section~\ref{section:bcaestimates} examines the validity of \emph{ad hoc} forecast methods currently used in the literature to estimate the long-run benefits of programs with short-term follow up. Section~\ref{section:conclusion} summarizes the paper.
 
 \begin{sidewaysfigure}[H]
 \centering
@@ -148,8 +150,6 @@ Figure~\ref{figure:ranges} summarizes the range of all of the estimates that we 
 \footnotesize \justify
 Note: Panel (a) displays the distribution of estimates of the benefit/cost ratio that we estimate throughout the paper. Horizontal lines indicate the baseline estimates, presented in Figure~\ref{figure:main}. Panel (b) presents the analogous figure for the internal rate of return.\\
 \end{sidewaysfigure}
-
-This paper justifies and interprets these estimates. The paper unfolds in the following way. Section~\ref{section:background} discusses the ABC/CARE program. Section~\ref{section:cbamethodology} presents our notation and the definitions of the treatment effects reported in \cite{Garcia_Heckman_Ziff_2017_Gender-Diff_UNPUBLISHED} that are the basis for the estimates reported in this paper. They show that the program had substantial impacts on multiple domains. This paper reports treatment effects in economically meaningful metrics.  Section~\ref{section:cbamethodology} presents our methods for forecasting life-cycle outcomes and the evidence supporting the assumptions that justify them. Section~\ref{section:monetizing-benefits-costs} discusses how we monetize life-cycle outcomes. Section~\ref{section:cbaresults} reports our estimates of benefit/cost ratios and rates of return and the outcomes from a variety of robustness checks. Section~\ref{section:bcaestimates} examines the validity of \emph{ad hoc} forecast methods currently used in the literature to estimate the long-run benefits of programs with short-term follow up. Section~\ref{section:conclusion} summarizes the paper.
 
 \section[Background and Data Sources]{Background and Data Sources} \label{section:background}
 
@@ -199,7 +199,7 @@ $^*$When not observed, we impute based on the national arrest-sentence ratio  fr
 \end{threeparttable}
 \end{sidewaystable}
 
-This section explains our strategy for constructing out-of-sample treatment effects.\footnote{ Appendix~\ref{appendix:gmm} gives details of our step-by-step procedure and states its identification and estimation strategy in the Generalized Method of Moments framework.} Our approach builds on the analysis of \citet{Heckman_Pinto_etal_2013_PerryFactor}, who show that, for the Perry Preschool program, the effect of treatment on outcomes operates through its effects on measured inputs in a stable production function rather than through shifts in the production function. If this is also true for ABC/CARE, it greatly facilitates our projection analysis. We test and do not reject the hypothesis on ABC/CARE data.
+This section explains our strategy for constructing out-of-sample treatment effects.\footnote{ Appendix~\ref{appendix:gmm} gives details of our step-by-step procedure and states its identification and estimation strategy in the Generalized Method of Moments framework.} Our approach builds on the analysis of \citet{Heckman_Pinto_etal_2013_PerryFactor}, who show that, for the Perry Preschool program, the effect of treatment on outcomes operates through its effects on measured inputs in a stable production function rather than through shifts in the production function. If this is also true for ABC/CARE, it greatly facilitates our projection analysis. We test and do not reject the hypothesis that the treatment works by shifting the inputs and not the production function using the ABC/CARE data.
 
 Table~\ref{table:sources} presents the outcomes for which we conduct these analyses and summarizes the methodology and auxiliary samples used. We focus on labor income to illustrate our approach, but a similar methodology is used to forecast other outcomes.\footnote{We do not monetize the loss of leisure and household production that individuals experience from working (this applies both to the individuals in the program and to their parents). The reasons for this are two-fold: (i) we lack information on intensive-margin labor supply; and (ii) different labor supply models and market structures have different implications with respect to the value of nonmarket time. In addition, our data are not well-suited for estimating a structural model of labor supply. We note, however, that the benefit/cost ratio and internal rate of return are both statistically significant and substantial after removing any benefits from labor income entirely (see Table~\ref{table:cba}). This exercise corresponds to a one-to-one loss of leisure given the gain in labor income, i.e. for each additional dollar an individual makes, she loses the same dollar of (monetized) leisure and household production.}$^,$\footnote{Our calculations are based on labor income gross of tax, because we want to quantify the effects of the program on the gross output that an individual is able to produce. A rise in gross labor income increases the taxable base and has an implied increase in deadweight loss. We do not quantify that deadweight loss because: (i) we do not have enough information to make full use of standard tax simulators; and (ii) we are not able to vary the standard tax simulators to assess estimation uncertainty.}
 
@@ -209,7 +209,7 @@ We have data on control- and treatment-group members through age $a^{\ast}$. We 
 
 Making valid forecasts of out-of-sample treatment effects does not require making valid forecasts of separate out-of-sample treatment and control profiles. Only valid forecasts of their difference are required.
 
-Nonetheless, in this paper we focus on making valid forecasts of separate treatment and control profiles after age $a^*$. Doing so allows us to test the validity of our methodology by comparing (within the support of the experimental sample) outcomes by treatment status for the experimental control and treatment groups with those from the synthetic control and treatment groups we generate. Comparisons between the experimental control group and the synthetic control group are particularly compelling because neither group receives treatment.\footnote{Although some might be attending other centers. We control for participation in Head Start in our auxiliary samples. Doing so does not substantially affect our estimates. \textbf{[We are working on this and will update tomorrow.]}} Because all persons in the experimental sample who are offered treatment accept it, it is straightforward to construct synthetic control groups in auxiliary samples using only eligibility criteria.
+Nonetheless, in this paper we focus on making valid forecasts of separate treatment and control profiles after age $a^*$. Doing so allows us to test the validity of our methodology by comparing (within the support of the experimental sample) outcomes by treatment status for the experimental control and treatment groups with those from the synthetic control and treatment groups we generate. Comparisons between the experimental control group and the synthetic control group are particularly compelling because neither group receives treatment.\footnote{Although some might be attending other centers. We control for participation in Head Start in our auxiliary samples. Doing so does not substantially affect our estimates.} Because all persons in the experimental sample who are offered treatment accept it, it is straightforward to construct synthetic control groups in auxiliary samples using only eligibility criteria.
 
 There are two distinct stages in our analysis. In Stage I, we construct samples of individuals in the auxiliary samples with characteristics similar to the individuals in the experimental sample. The minimal set of characteristics includes the background variables $\bm{B} \in \mathcal{B}_0$. We use a coarse form of matching based on Algorithm~\ref{alg:match} in  Appendix~\ref{appendix:match}. In Stage II, we build models using these samples to forecast out-of-sample outcomes separately for the outcomes of the treated and the controls.
 
@@ -223,7 +223,7 @@ Figure~\ref{fig:labor-income-profiles} previews the results of applying this app
 
 \begin{sidewaysfigure}[!htbp]
 \centering
-\caption{Forecasted Labor Income Profiles for ABC/CARE Participants \textbf{[JJH: still a big gap!] [We now have the comparison the difference between treatment and control in experimental and non-experimental samples. We cannot reject the null hypothesis that this difference is 0. This is added to the figure note.]}}\label{fig:labor-income-profiles}
+\caption{Forecasted Labor Income Profiles for ABC/CARE Participants}\label{fig:labor-income-profiles}
 \begin{subfigure}[h]{0.5\textwidth}
 		\centering
 		\caption{Males} \label{fig:labor-income-profilesc}
@@ -238,7 +238,7 @@ Figure~\ref{fig:labor-income-profiles} previews the results of applying this app
 Note: Panel (a) displays the forecasted life-cycle labor income profiles for ABC/CARE males by treatment status, based on the method proposed in this section. We combine data from the Panel Study of Income Dynamics (PSID), the National Longitudinal Survey of Youth 1979 (NLSY79), and the Children of the National Longitudinal Survey of Youth 1979 (CNLSY79). We highlight the \textit{observed} labor income at $a^*$ (age 30) for the ABC/CARE control- and treatment-group participants. Panel (b) displays the analogous figure for females. Our forecasts go up to age 67, the age of assumed retirement. Standard errors are based on the empirical bootstrap distribution. See Condition~\ref{cond:cond3} for a discussion of testing the difference in the observed and forecasted treatment effects (as opposed to the difference in the observed and forecasted levels). See  Appendix~\ref{appendix:methodology} for a discussion of our choice of predictors and a sensitivity analysis on those predictors. For the control-group males, we over-predict labor income; for the treatment-group males we under-predict labor income. The over- and under-forecasts are not statistically significant (and they underestimate the predicted treatment effect on labor income at age 30). For the control-group females, we under-predict labor income; for treatment-group females, we over-predict labor income. This overestimates the predicted treatment effect on labor income at age 30. This overestimation, however, is not statistically significant (and labor income is a relatively minor component of the overall analysis for females).
 \end{sidewaysfigure}
 
-We conduct a further check on the validity of our procedure. In the experimental sample all of the parents of children with characteristics $\bm{B} \in \mathcal{B}_0$ agree to participate in the program.  Because the auxiliary samples have no treatment group members, we can evaluate our procedure by comparing the labor incomes of individuals in the auxiliary samples for whom $\bm{B} \in \mathcal{B}_0$ to the labor incomes of individuals in our constructed synthetic control group. Figure~\ref{figure:controltests} makes this comparison. \textbf{[JJH: Do we have any way to control for this? E.g., using a predicted value of using Head Start?][We are working on this and will update it tomorrow.]} It plots the average labor incomes of individuals in our auxiliary sample for whom $\bm{B} \in \mathcal{B}_0$ alongside those of the constructed synthetic control group from ages 20 to 45. It also displays the labor income of the experimental control group at $a^*$ (age 30).\footnote{The graphs stop at age 45 because we do not observe all of the components of the risk index determinants of eligibility after age 45 in the auxiliary samples. We use only a subset of this index to make life-cycle projections. These variables are effective predictors over the age range for which the full set of $\bm{B}$ is available.} The agreement is reassuringly close. We now formalize our approach.
+We conduct a further check on the validity of our procedure. In the experimental sample all of the parents of children with characteristics $\bm{B} \in \mathcal{B}_0$ agree to participate in the program.  Because the auxiliary samples have no treatment group members, we can evaluate our procedure by comparing the labor incomes of individuals in the auxiliary samples for whom $\bm{B} \in \mathcal{B}_0$ to the labor incomes of individuals in our constructed synthetic control group. Figure~\ref{figure:controltests} makes this comparison. It plots the average labor incomes of individuals in our auxiliary sample for whom $\bm{B} \in \mathcal{B}_0$ alongside those of the constructed synthetic control group from ages 20 to 45. It also displays the labor income of the experimental control group at $a^*$ (age 30).\footnote{The graphs stop at age 45 because we do not observe all of the components of the risk index determinants of eligibility after age 45 in the auxiliary samples. We use only a subset of this index to make life-cycle projections. These variables are effective predictors over the age range for which the full set of $\bm{B}$ is available.} The agreement is reassuringly close. We now formalize our approach.
 
 \begin{sidewaysfigure}[!htbp]
 \centering
@@ -384,24 +384,25 @@ $\phi^d_{k,j,a}(\bm{x})$ is the function generating the causal effect of setting
 \end{assumption}
 \doublespacing
 
-This assumption has two distinct aspects: (i) the structural functions evaluated at the same arguments have identical values for treatment and control groups in the experimental sample. It also says (ii) that the structural relationships are identical in the experimental and auxiliary samples. As previously noted, exogeneity is not needed to justify Conditions~\ref{cond:cond1} through \ref{cond:cond3}. But in the absence of exogeneity, the relationship between the inputs, $\bm{X}^d_{k,a}$, and the errors, $\bm{\varepsilon}^d_{k,a}$, likely differs across experimental ($e$) and non-experimental ($n$) samples because randomization imparts a source of exogenous variation to $\bm{X}^d_{e,a}$ not present in non-experimental samples. Assumption~\ref{ass:summary} combined with Assumption~\ref{ass:exog}, Equation~\eqref{eq:countersystem}, and the assumption of $\mathbb{E}(\varepsilon^d_{k,j,a})=0$ for all $a \in \{1,\dots,A\}, d \in \{0,1\}$ and $k \in \{e,n\}$ enable us to write:
-\begin{equation}\label{eq:invariancetest}
-\mathbb{E} \left[ Y_{k,j,a}^d | \bm{X}_{k,a}^d  = \bm{x}, \bm{B}_k = \bm{b}, D = d \right] = \mathbb{E} \left[ Y_{k,j,a} | \bm{X}^d_{k,a}  = \bm{x}, \bm{B}_k = \bm{b} \right],
-\end{equation}
-for $a \in \{1,\dots,A\}$, $k \in \{e,n\}$, and $d \in \{0,1\}$.
+This assumption has two distinct aspects: (i) the structural functions evaluated with the same arguments have identical values for treatment and control groups in the experimental sample. It also says (ii) that the structural relationships are identical in the experimental and auxiliary samples. As previously noted, exogeneity is not needed to justify Conditions~\ref{cond:cond1} through \ref{cond:cond3}. But in the absence of exogeneity, the relationship between the inputs, $\bm{X}^d_{k,a}$, and the errors, $\bm{\varepsilon}^d_{k,a}$, likely differs across experimental ($e$) and non-experimental ($n$) samples because randomization imparts a source of exogenous variation to $\bm{X}^d_{e,a}$ that is absent in non-experimental samples.
 
 \subsubsection{Testable Implications}
 
-Equation~\eqref{eq:invariancetest} relates outcomes, $Y_{k,j,a}^d$, to treatment effects on $\bm{X}_{k,a}^d$, together with the background variables, $\bm{B}_k$. It is possible to test \ref{ass:summary} within the age group of the experimental sample ($a \leq a^*$). The test consists of asking if $\bm{X}_{e,a}^d$ and $\bm{B}$ predicts treatment effects within the experimental sample for $Y_{e,j,a}$. Under the null hypothesis that \ref{ass:summary} is correct, a separate indicator variable for treatment status ($d$) is irrelevant when computing $\mathbb{E} \left[ Y_{e,j,a} | \bm{X}_{k,a}^d  = \bm{x}, \bm{B}_k =  \bm{b}, D = d \right]$. In  Appendix~\ref{app:invariance}, we test and do not reject the null hypotheses across a variety of outcomes.\footnote{This holds both when pooling males and females and when testing separately by gender (see  Appendix~\ref{app:invariance}).}
+Assumption~\ref{ass:summary} combined with Assumption~\ref{ass:exog}, Equation~\eqref{eq:countersystem}, and the assumption of $\mathbb{E}(\varepsilon^d_{k,j,a})=0$ for all $a \in \{1,\dots,A\}$ enable us to write testable implications of our forecasting models. The test for the first aspect of invariance consists of asking if $\bm{X}_{e,a}^d$ and $\bm{B}$ predict treatment effects within the experimental sample for $Y_{e,j,a}$. Under the null hypothesis that \ref{ass:summary} is correct, a separate indicator variable for treatment status ($d$) is irrelevant when computing $\mathbb{E} \left[ Y_{e,j,a} | \bm{X}_{k,a}^d  = \bm{x}, \bm{B}_k =  \bm{b}, D = d \right]$. In  Appendix~\ref{app:invariance}, we test and do not reject the null hypothesis across a variety of outcomes.\footnote{This holds both when pooling males and females and when testing separately by gender (see  Appendix~\ref{app:invariance}).} The test for the second aspect of invariance is analogous, and we also fail to reject the null hypothesis implied by it (see Appendix~\ref{app:invariance}). In sum, exogeneity and invariance enable us to jointly test the two aspects of structural invariance for $a \leq a^*$, when $Y_{k,j,a}$ is observed in both the experimental and auxiliary samples: 
 
-Exogeneity and invariance enable us to test additional assumptions. By Equation~\eqref{eq:invariancetest}, we can write:
-\begin{equation}\label{eq:withbetimplication}
-\mathbb{E} \left[ Y_{e,j,a} | \bm{X}^d_{e,a} = \bm{x}, \bm{B}_e = \bm{b} \right] = \mathbb{E} \left[ Y_{n,j,a} | \bm{X}^d_{n,a} = \bm{x}, \bm{B}_n = \bm{b} \right]
-\end{equation}
+\begin{eqnarray}
+\mathbb{E} \left[ Y_{e,j,a}^1 | \bm{X}_{e,a}^1 = \bm{x}, \bm{B}_{e} = \bm{b}, D = 1   \right] &=&  \mathbb{E} \left[ Y_{e,j,a}^0 | \bm{X}_{e,a}^0 = \bm{x}, \bm{B}_{e} = \bm{b}, D = 0   \right] \\
+\mathbb{E} \left[ Y_{e,j,a}^d | \bm{X}_{e,a}^d = \bm{x}, \bm{B}_{e} = \bm{b}, D = d   \right] &=&  \mathbb{E} \left[ Y_{n,j,a} | \bm{X}_{n,a} = \bm{x}, \bm{B}_{n} = \bm{b} \right] \text{ for }  d \in \{0,1\}.
+\end{eqnarray}
 
-\noindent for $d \in \{0,1\} \quad  a \in \{1,\dots,A\}$.
+We do not reject the null hypotheses of no differences in the conditional mean functions in the experimental and auxiliary samples conditioning on $\bm{X}_{k,a}^d$ and $\bm{B}_k, \: k \in \{e,n\}$.\footnote{This holds when pooling males and females and when testing separately by gender (see  Appendix~\ref{app:invariance}).} Under our assumptions, experimental treatment effects should equal differences in the conditional means of the non-experimental samples evaluated at $\bm{X}_{n,a} = \bm{x}^1$ and  $\bm{X}_{n,a} = \bm{x}^0$:
 
-The relationship in Equation~\eqref{eq:withbetimplication} is testable for $a \leq a^*$, when $Y_{k,j,a}$ is observed in both the experimental and auxiliary samples. We do not reject the null hypotheses of no differences in the conditional mean functions in the experimental and auxiliary samples conditioning on $\bm{X}_{k,a}^d$ and $\bm{B}_k, \: k \in \{e,n\}$.\footnote{This holds when pooling males and females and when testing separately by gender (see  Appendix~\ref{app:invariance}).}
+\begin{eqnarray}
+\mathbb{E} \left[ Y_{e,j,a}^1 |  \bm{X}_{e,a}^1 = \bm{x}^1, \bm{B}_e = \bm{b}, D = 1 \right] - \mathbb{E} \left[ Y_{e,j,a}^0 |  \bm{X}_{e,a}^0 = \bm{x}^0, \bm{B}_e = \bm{b}, D = 0 \right] = \nonumber \\
+\mathbb{E} \left[ Y_{n,j,a} | \bm{X}_{n,a} = \bm{x}^1, \bm{B}_n = \bm{b} \right] - \mathbb{E} \left[ Y_{n,j,a} | \bm{X}_{n,a} = \bm{x}^0, \bm{B}_n = \bm{b} \right].
+\end{eqnarray} 
+
+We report tests for this implication at $a \leq a^*$ in Section~\ref{sec:usingaux}.
 
 \subsubsection{Summarizing the Implications of Exogeneity and Structural Invariance}
 
@@ -434,15 +435,17 @@ We discuss this approach in Appendix~\ref{appendix:match}. Matching is a non-par
 \footnotesize
 \input{output/alternative_specifications}
 \begin{tablenotes}
-\small
+\normalsize
 \item Note: This table displays the net present value of labor income in 2014 USD (treatment - control) using the five different specifications for forecasts that are explained below. Specification 1 is our baseline estimate. It also presents the calculation of the internal rate of return and the benefit/cost ratio of the program using these different net present values. Specification 1: forecast based on lagged outcome; no serial autocorrelation; and no fixed effect. Specification 2: forecast based on lagged outcome; arbitrary serial autocorrelation; and no fixed effect. Specification 3: forecast based on lagged outcome; first-order serial autocorrelation; and no fixed effects. Specification 4: forecast based on lagged outcome; no serial autocorrelation; and fixed effect.
 \item Model: The different specifications are particular cases of the following model
 
+\begin{large}
 \begin{eqnarray}
 Y_{k,j,a}                   &=& \lambda_{0} + \lambda_{1} Y_{k,j,a-1} + \lambda_{2}  \bm{X}_{k,a} + \varepsilon_{k,j,a} \nonumber \\
 \varepsilon_{k,j,a} &=& \underbrace{f}_{\text{Person-Specific Effect}} + \underbrace{\omega_{k,j,a}}_{\text{Possibly Serially Correlated Component}} \nonumber \\
 \omega_{k,j,a}      &=& \rho \omega_{k,j,a-1} + \underbrace{U_{k,j,a}}_{\text{Independent Innovation}},
 \end{eqnarray}
+\end{large}
 
 \end{tablenotes}
 \end{threeparttable}
@@ -451,7 +454,7 @@ Y_{k,j,a}                   &=& \lambda_{0} + \lambda_{1} Y_{k,j,a-1} + \lambda_
 
 \subsubsection{Exploring the Impact of Other Forecast Models} \label{section:predsensitivity}
 
-In Appendix~\ref{appendix:predsensitivity}, we analyze the consequences of using more general forecast models that allow us to relax exogeneity Assumption~\ref{ass:exog}. We estimate standard panel data specifications. We summarize the results from these exercises for the case of labor income forecasts in Table~\ref{table:predsens} with a comprehensive note at the base of the table. Present value forecasts exhibit little sensitivity across these different methods, and do not differ substantially from the prediction baseline model. \textbf{[JJH: Need baseline] [JLG: baseline has been clarified in Table 2.]}
+In Appendix~\ref{appendix:predsensitivity}, we analyze the consequences of using more general forecast models that allow us to relax exogeneity Assumption~\ref{ass:exog}. We estimate standard panel data specifications. We summarize the results from these exercises for the case of labor income forecasts in Table~\ref{table:predsens} with a comprehensive note at the base of the table. Present value forecasts exhibit little sensitivity across these different methods, and do not differ substantially from the prediction baseline model.
 
 \section{Monetizing Specific Components of the Benefits and Costs}
 \label{section:monetizing-benefits-costs}
@@ -475,7 +478,7 @@ At each age, once we obtain the transition probability for each health outcome, 
 The models estimated using MCBS represent medical costs in the years 2007--2010. The MEPS estimation captures costs during 2008--2010. To account for real medical cost growth after 2010, we adjust each model's forecast using the method described in  Appendix~\ref{appendix:health-fam-simulation}.
 
 \begin{figure}[!htbp]
-\caption{Quality-Adjusted Life Years: Forecasts and Comparison to PSID \textbf{[JJH: Match not great] [JLG: A great concern, and I'm talking to Duncan to see if we can do better.] [JJH: Ok---what is the result? Looks like we greatly underestimate the PV of health benefits] [JLG: I'm still waiting on this. But an update will be here soon.] [JJH: Good] [JLG: one more day on this; sorry but things are moving slow in our other end.]}}\label{fig:qalys}
+\caption{Quality-Adjusted Life Years: Forecasts and Comparison to PSID \textbf{[JJH: Match not great] [JLG: A great concern, and I'm talking to Duncan to see if we can do better.] [JJH: Ok---what is the result? Looks like we greatly underestimate the PV of health benefits] [JLG: I'm still waiting on this. But an update will be here soon.] [JJH: Good] [JLG: one more day on this; sorry but things are moving slow in our other end.][JLG: I sent you an update on this by email. Not too much to be improved here.]}}\label{fig:qalys}
 \centering
 \includegraphics[width=.7\columnwidth]{output/qalyexppsid.eps}
 \floatfoot{
@@ -603,7 +606,7 @@ Note: This figure displays the life-cycle net present values of the main compone
 
 \section{Using Our Estimates to Understand Recent Benefit/Cost Analyses}\label{section:bcaestimates}
 
-We use our analysis to examine the empirical foundations of the approach to benefit/cost analysis taken in a prototypical study of \citet{Kline_Walters_2016_QJE}, which is based on estimates from \citet{Chetty_Friedman_etal_2011_QJoE}. This approach is a potentially misleading back-of-the-envelope calculation and has been widely emulated recently. Examples of this approach include \citet{Attanasio_Kugler_Meghir_2011_AEJAE}, \cite{Behrman-et-al_2011_JHR-Progresa}, and \cite{Deshpande_Yue_2017_Screened_Unpublished}. \citet{Kline_Walters_2016_QJE} use data from the Head Start Impact Study (HSIS) and report a benefit/cost ratio between $1.50$ and $1.84$.\footnote{HSIS is a one-year-long randomized evaluation of Head Start.} Their analysis proceeds in three steps: (i) calculate treatment effects on IQ measured around age 5\footnote{They use an index based on the Peabody Picture Vocabulary and Woodcock Johnson III Tests.}; (ii) monetize this gain using the return to the IQ measured between ages 5 and 7 in terms of net present value of labor income at age 27 using the analysis of \citet{Chetty_Friedman_etal_2011_QJoE}.\footnote{The \citet{Chetty_Friedman_etal_2011_QJoE} return is based on Stanford Achievement Tests.}$^,$\footnote{For this comparison exercise, we interpret the earnings estimated in \citet{Chetty_Friedman_etal_2011_QJoE} to be equivalent to labor income.}$^,$\footnote{Calculations from \citet{Chetty_Friedman_etal_2011_QJoE} indicate that a 1 standard deviation gain in IQ at age 5 implies a $13.1\%$ increase in the net present value of labor income through age 27. This is based on combining information from Project Star and administrative data at age 27.}; and (iii) calculate the benefit/cost ratio based on this gain and their own calculations of the program's cost.\footnote{Their calculation assigns the net present value of labor income through age 27 of $\$385,907.17$ to the control-group participants, as estimated by  \citet{Chetty_Friedman_etal_2011_QJoE}.}$^,$\footnote{All monetary values that we provide in this section are in 2014 USD. We discount the value provided by \citet{Chetty_Friedman_etal_2011_QJoE} to the age of birth of the children in our sample (first cohort).}
+We use our analysis to examine the empirical foundations of the approach to benefit/cost analysis taken in a prototypical study of \citet{Kline_Walters_2016_QJE}, which is based on estimates from \citet{Chetty_Friedman_etal_2011_QJoE}. This approach is a potentially misleading back-of-the-envelope calculation and has recently been widely emulated. Examples of this approach include \citet{Attanasio_Kugler_Meghir_2011_AEJAE}, \cite{Behrman-et-al_2011_JHR-Progresa}, and \cite{Deshpande_Yue_2017_Screened_Unpublished}. \citet{Kline_Walters_2016_QJE} use data from the Head Start Impact Study (HSIS) and report a benefit/cost ratio between $1.50$ and $1.84$.\footnote{HSIS is a one-year-long randomized evaluation of Head Start.} Their analysis proceeds in three steps: (i) calculate treatment effects on IQ measured around age 5\footnote{They use an index based on the Peabody Picture Vocabulary and Woodcock Johnson III Tests.}; (ii) monetize this gain using the return to the IQ measured between ages 5 and 7 in terms of net present value of labor income at age 27 using the analysis of \citet{Chetty_Friedman_etal_2011_QJoE}.\footnote{The \citet{Chetty_Friedman_etal_2011_QJoE} return is based on Stanford Achievement Tests.}$^,$\footnote{For this comparison exercise, we interpret the earnings estimated in \citet{Chetty_Friedman_etal_2011_QJoE} to be equivalent to labor income.}$^,$\footnote{Calculations from \citet{Chetty_Friedman_etal_2011_QJoE} indicate that a 1 standard deviation gain in IQ at age 5 implies a $13.1\%$ increase in the net present value of labor income through age 27. This is based on combining information from Project Star and administrative data at age 27.}; and (iii) calculate the benefit/cost ratio based on this gain and their own calculations of the program's cost.\footnote{Their calculation assigns the net present value of labor income through age 27 of $\$385,907.17$ to the control-group participants, as estimated by  \citet{Chetty_Friedman_etal_2011_QJoE}.}$^,$\footnote{All monetary values that we provide in this section are in 2014 USD. We discount the value provided by \citet{Chetty_Friedman_etal_2011_QJoE} to the age of birth of the children in our sample (first cohort).}
 
 \begin{table}[!htbp]
 \begin{threeparttable}
@@ -633,7 +636,7 @@ This paper goes beyond analyzing batteries of short-term of treatment effects on
 
 Our analysis accounts for many sources of statistical and modeling uncertainty. We go beyond current simplistic analyses that quantify a single, short-term treatment effect to forecast labor income without providing a sense of statistical and modeling uncertainty. We quantify long-term costs and benefits and provide a life-cycle analysis. We quantify and monetize health outcomes, a novel outcome in the evaluation of early childhood programs.
 
-We demonstrate the benefits of economic and econometric theory, and auxiliary data sets, for evaluating the long-term benefits of a social experiment. Our forecasts rely on economic models and on testable assumptions about functional form relationships which we are able to test. We show the robustness of our estimates through extensive empirical sensitivity analyses. We produce baseline estimates and then provide a wide array of estimates, for readers to analyze what the estimates would be under assumptions that they found most plausible. Our estimates of the internal rate of return (benefit/cost ratio) range from 8.0\% to 18.3\% (1.52 to 17.40). Investing in this program is a highly profitable activity.
+We demonstrate the benefits of economic and econometric theory, and auxiliary data sets, for evaluating the long-term benefits of a social experiment. Our forecasts rely on economic models and on testable assumptions about functional form relationships which we are able to test. We show the robustness of our estimates through extensive empirical sensitivity analyses. We produce baseline estimates and then provide a wide array of estimates, for readers to analyze what the estimates would be under assumptions that they found most plausible. Our estimates of the internal rate of return (benefit/cost ratio) range from 8.0\% to 18.3\% (1.52 to 17.40). Investing in this program is highly profitable.
 
 \clearpage
 
